@@ -4,6 +4,7 @@
   - rename strcut descripter to pointer
   - rename env->new_struct to env->new_pointer
   - rename env->get_struct to env->get_pointer
+  - remove object null check from env->get/set_xxx_field
 0.0354 2018-07-03
   - Get and check field index in top of subroutine in precompile
   - Get and check package variable id in top of subroutine in precompile
